
syntax = "proto3";

package com.spotify.collection2.v2.proto;

message PageRequest {
    string username = 1;
    string set_name = 2;
    string pagination_token = 3;
    int32 limit = 4;
}

message PageResponse {
    repeated CollectionItem items = 1;
    string next_page_token = 2;
    string sync_token = 3;
}

message DeltaRequest {
    string username = 1;
    string set_name = 2;
    string last_sync_token = 3;
}

message DeltaResponse {
    bool delta_update_possible = 1;
    repeated CollectionItem items = 2;
    string sync_token = 3;
}

message WriteRequest {
    string username = 1;
    string set_name = 2;
    repeated CollectionItem items = 3;
    string client_update_id = 4;
}

message PubSubUpdate {
    string username = 1;
    string set_name = 2;
    repeated CollectionItem items = 3;
    string client_update_id = 4;
}

message InitializedRequest {
    string username = 1;
    string set_name = 2;
}

message InitializedResponse {
    bool initialized = 1;
}

message CollectionItem {
    string uri = 1;
    int64 added_at_ts = 2;
    bool is_removed = 3;
}
